Refactor rest (#30)
* Reactor rest controllers